--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link " aria-current="page" href="/">Home</a>
+            <a class="nav-link " aria-current="page" href="/Bcoder-Bootstrap/">Home</a>
           </li>
           <!-- <li class="nav-item">
                 <a class="nav-link" href="/blogs.html">Blogs</a>
@@ -48,10 +48,10 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">About us</a>
+            <a class="nav-link" href="/Bcoder-Bootstrap/about.html">About us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="/contact.html">Contact Us</a>
+            <a class="nav-link active" href="/Bcoder-Bootstrap/contact.html">Contact Us</a>
           </li>
 
 
